--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,4 +1,4 @@
-name: Build .ner3.5 Project
+name: Build Seatbelt
 
 on:
   push:
@@ -8,33 +8,27 @@ on:
     branches:
       - main
   workflow_dispatch:
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Setup .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '3.5'
+    - name: Setup .NET Framework 3.5
+      run: |
+        echo Installing .NET Framework 3.5
+        dism /online /enable-feature /featurename:NetFx3 /all
 
-      - name: Restore dependencies
-        run: dotnet restore
+    - name: Restore NuGet packages
+      run: nuget restore
 
-      - name: Build project
-        run: dotnet build --configuration Release --no-restore
+    - name: Build
+      run: msbuild /p:Configuration=Release
 
-      - name: Run tests
-        run: dotnet test --no-restore --verbosity normal
-
-      - name: Publish artifacts
-        run: dotnet publish -c Release -o out
-
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: build-output
-          path: out
+    - name: Test
+      run: |
+        echo No tests configured
+        # If you have tests, add the command to run them here
