--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,28 +1,29 @@
-name: Build Seatbelt
+name: Release
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
+    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
+    branches: ["master"]
+
 jobs:
-  build:
-    runs-on: windows-2019
+
+  linux-windows-build:
+    name: CSharp Build
+    if: startsWith( github.ref, 'refs/tags/v')
+    runs-on: windows-latest
+    timeout-minutes: 45
     steps:
-      - name: checkout
-        uses: actions/checkout@v1
-      - name: Restore NuGet packages
-        run: nuget restore
-      - name: Build DotNET35
-        run: |
-           cd "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\MSBuild\Current\Bin\"
-           .\MSBuild.exe $Env:GITHUB_WORKSPACE\Seatbelt.sln /p:Configuration=Release
 
+    - name: Add msbuild to PATH
+      uses: microsoft/setup-msbuild@v1.1
+  
+    - name: Check out code
+      uses: actions/checkout@v2
 
-    - name: Test
+    - name: Git Fetch Tags
+      run: git fetch --prune --unshallow --tags -f
+
+    - name: MSBuild
       run: |
-        echo No tests configured
-        # If you have tests, add the command to run them here
+        msbuild.exe Seatbelt.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=compiled/
+        Copy-Item -Path Seatbelt\compiled\Seatbelt.exe -Destination compiled\Seatbelt.exe
