--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,8 +2,9 @@ name: Release
 
 on:
   push:
-    tags: ["v[0-9]+.[0-9]+.[0-9]+"]
-    branches: ["master"]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
 
