--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,3 +27,15 @@ jobs:
       run: |
         msbuild.exe Seatbelt.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=compiled/
         dir Seatbelt/compiled
+    - name: update release file
+      run: | 
+        echo Seatbelt.exe > Release.txt
+        echo Seatbelt.exe.config > Release.txt
+
+    - name: Test
+      run: cat Release.txt
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      if: startsWith(github.ref, 'refs/tags/')
+      with:
+          files: Release.txt
