--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,15 +27,17 @@ jobs:
       run: |
         msbuild.exe Seatbelt.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=compiled/
         dir Seatbelt/compiled
-    - name: update release file
-      run: | 
-        echo Seatbelt.exe > Release.txt
-        echo Seatbelt.exe.config > Release.txt
 
-    - name: Test
-      run: cat Release.txt
-    - name: Release
+    - name: Create Release Directory
+      run: mkdir -p release
+
+    - name: Move Built Files to Release Directory
+      run: |
+        cp Seatbelt/compiled/Seatbelt.exe release/
+        cp Seatbelt/compiled/Seatbelt.exe.config release/
+
+    - name: Upload Release Package
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-          files: Release.txt
+        files: release/*
