--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -28,16 +28,9 @@ jobs:
         msbuild.exe Seatbelt.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=compiled/
         dir Seatbelt/compiled
 
-    - name: Create Release Directory
-      run: mkdir -p release
-
-    - name: Move Built Files to Release Directory
-      run: |
-        cp Seatbelt/compiled/Seatbelt.exe release/
-        cp Seatbelt/compiled/Seatbelt.exe.config release/
 
     - name: Upload Release Package
       uses: softprops/action-gh-release@v2
       if: startsWith(github.ref, 'refs/tags/')
       with:
-        files: release/*
+        files: Seatbelt/compiled/*
