--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,16 +22,13 @@ jobs:
 
     - name: Git Fetch Tags
       run: git fetch --prune --unshallow --tags -f
-    - name: Determine Next Tag
+      
+    - name: Create Git Tag
       id: tag
       run: |
-        latest_tag=$(git describe --tags `git rev-list --tags --max-count=1`)
-        if [ -z "$latest_tag" ]; then
-          next_tag=1
-        else
-          next_tag=$((latest_tag + 1))
-        fi
-        echo "next_tag=$next_tag" >> $GITHUB_ENV
+        TAG_NAME=$(date +%Y%m%d%H%M%S)
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
+        
     - name: MSBuild
       run: |
         msbuild.exe Seatbelt.sln /p:Configuration=Release /p:Platform="Any CPU" /p:OutputPath=compiled/
@@ -41,4 +38,4 @@ jobs:
       uses: softprops/action-gh-release@v2
       with:
         files: Seatbelt/compiled/*
-        tag_name: ${{ env.next_tag }}
+        tag_name: ${{ env.TAG_NAME }}
